# ToCloud9

./: .dockerignore  .env  .gitignore  LICENSE  Makefile  README.md  config.yml.example  docker-compose-db.yaml  docker-compose-setup.yaml  docker-compose.yaml  go.mod  go.sum  libsidecar.h
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: build-and-push-gameserver-images.yml  build-and-push-go-images.yml  build-libsidecar-cpp.yml  build-release.yml  test-and-covarge.yml
apps/auctionhouse/: Dockerfile  auctionhouse.go
apps/auctionhouse/config/: config.go
apps/auctionhouse/repo/: auction.go  auction_mysql.go  itemtemplate.go  itemtemplate_test.go  stmts.go
apps/auctionhouse/server/: auction-logger_debug.go  auction.go
apps/auctionhouse/service/: auction.go  auction_events.go  auction_test.go  errors.go
apps/authserver/: Dockerfile
apps/authserver/config/: config.go
apps/authserver/repo/: account.go  account_mysql.go  auth_stmt.go  auth_stmt_ac.go  auth_stmt_cm.go  auth_stmt_tc.go  realm.go  realm_mysql.go
apps/authserver/service/: realm.go
apps/authserver/session/: authsession.go
apps/charserver/: Dockerfile  charserver.go
apps/charserver/config/: config.go
apps/charserver/repo/: accounts.go  accounts_mysql.go  arena_team.go  character-login-locks.go  character-login-locks_mysql.go  characters.go  characters_mysql.go  characters_stmt.go  charactersdb.go  items-template.go  items-template_cache.go  online-characters.go  (+2 more)
apps/chatserver/: Dockerfile  chatserver.go
apps/game-load-balancer/: Dockerfile  balancer.go
apps/gateway/: Dockerfile  balancer.go
apps/groupserver/: Dockerfile  groupserver.go
apps/guidserver/: Dockerfile  guidserver.go
apps/guildserver/: Dockerfile  guildserver.go
apps/layer-coordinator/: Dockerfile
apps/mailserver/: Dockerfile  mailserver.go
apps/matchmakingserver/: Dockerfile  README.md  matchmaking.go
apps/mysqlreverseproxy/: Dockerfile  README.md
apps/pathfinding/: Dockerfile
apps/perun/: README.md  go.mod  go.sum
apps/servers-registry/: Dockerfile
apps/wowsimclient/: README.md  auth.go  bot.go  movement.go  movement_test.go  server.go  world.go
chart/: Chart.yaml  README.MD  values.yaml
chart/charts/: mysql-12.2.2.tgz  mysql-9.14.3.tgz  nats-1.1.5.tgz
chart/files/: worldserver.conf
chart/templates/: auctionhouse.yaml  authserver.yaml  charserver.yaml  chatserver.yaml  databases.yaml  game-lb.yaml  gameserver_ac.yaml  gateway.yaml  groupserver.yaml  guidserver.yaml  guildserver.yaml  layer-coordinator.yaml  mailserver.yaml  matchmakingserver.yaml  servers-registry.yaml
doc/: Layering.md  RunNonDockerWinWSLAzerothCore.md  RunNonDockerWindowsAzerothCore.md  SessionOwnership.md
game-server/: Dockerfile
game-server/azerothcore/: Dockerfile
game-server/libsidecar/: arena-team-api.go  arena-team-api.h  battleground-api.go  battleground-api.h  character-service.go  events-group.c  events-group.go  events-group.h  events-guild.c  events-guild.h  events-guilds.go  events-servers-registry.go  events.go  group-service.go  grpc-api.go  guids.go  guild-api.c  guild-api.go  guild-api.h  guilds.go  lfg-api.c  lfg-api.go  lfg-api.h  lib.go  libsidecar.h  matchmaking.go  monitoring.go  petition-api.c  petition-api.go  petition-api.h  player-guild-api.c  player-guild-api.go  player-guild-api.h  player-interactions-api.go  player-items-api.c  player-items-api.go  player-items-api.h  player-money-api.go  player-money-api.h  servers-registry.go
game-server/libsidecar-cpp/: .gitignore  CMakeLists.txt  Dockerfile  README.md
game-server/libsidecar-cpp/cmake/: libsidecarConfig.cmake.in
game-server/libsidecar-cpp/include/: events-guild.h  libsidecar.h  petition-api.h  player-guild-api.h  player-items-api.h
game-server/libsidecar-cpp/include/libsidecar/: tc9_events.h  tc9_types.h
game-server/libsidecar-cpp/src/: api.cpp  compat_api.cpp
game-server/libsidecar-cpp/src/core/: config.cpp  config.h  error.cpp  error.h  logger.cpp  logger.h  thread_pool.cpp  thread_pool.h
game-server/libsidecar-cpp/src/events/: event_hooks.cpp  event_hooks.h  updates-barrier.cpp  updates-barrier.h
game-server/libsidecar-cpp/src/grpc/: clients.cpp  clients.h  grpc_manager.cpp  grpc_manager.h  handlers.cpp  server.cpp  server.h  worldserver_service.cpp  worldserver_service.h
game-server/libsidecar-cpp/src/guids/: guid_manager.cpp  guid_manager.h
game-server/libsidecar-cpp/src/http/: health_server.cpp  health_server.h
game-server/libsidecar-cpp/src/metrics/: prometheus.cpp  prometheus.h
game-server/libsidecar-cpp/src/nats/: consumer.cpp  consumer.h  handlers.cpp  handlers.h  publisher.cpp  publisher.h
game-server/libsidecar-cpp/src/queue/: handlers_queue.cpp  handlers_queue.h
game-server/libsidecar-cpp/tests/: c_api_compatibility_test.c  config_test.cpp  error_test.cpp  guid_manager_test.cpp  queue_test.cpp  request_processing_benchmark.cpp  request_processing_realistic_benchmark.cpp  thread_pool_test.cpp
game-server/trinitycore/: 31ea74b96e.diff  Dockerfile  e11613eeb5.diff
shared/authidentity/: identity.go
shared/config/: loader.go  logging.go
shared/events/: consumer-gateway.go  consumer-group.go  consumer-loadbalancer.go  events-auctionhouse.go  events-characters.go  events-chat.go  events-friends.go  events-gateway.go  events-group.go  events-guild.go  events-loadbalancer.go  events-mail.go  events-matchmaking.go  events-serversregistry.go  events-serversregistry_test.go  events.go  producer-auctionhouse.go  producer-characters.go  producer-chat.go  producer-gateway.go  producer-group.go  producer-guild.go  producer-loadbalancer.go  producer-mail.go  producer-matchmaking.go  producer-serversregistry.go
shared/groupstatetrace/: trace.go
shared/guid/: guid.go  guid_test.go
shared/healthandmetrics/: health-checker.go  health-checker_test.go  metrics-reader.go  metrics-reader_test.go  metrics.go  server.go
shared/repo/: charactersdb.go  schema.go
shared/slices/: append.go  append_test.go  comp.go  comp_test.go  reverse.go  reverse_test.go
shared/wow/: power.go  race.go
(+418 files in other folders)
